--- a/index.html
+++ b/index.html
@@ -26,3 +26,9 @@
   <li><a href="que-es-adsense.html">Qué es Google AdSense</a></li>
   <li><a href="ingresos-pasivos.html">Ingresos pasivos</a></li>
 </ul>
+<hr>
+<p>
+  <a href="privacidad.html">Privacidad</a> |
+  <a href="cookies.html">Cookies</a> |
+  <a href="aviso-legal.html">Aviso legal</a>
+</p>
