--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+     crossorigin="anonymous"></script>
   <title>Libertad Financiera</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
