--- a/ganar-dinero-internet.html
+++ b/ganar-dinero-internet.html
@@ -1,29 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <title>Cómo ganar dinero por Internet en 2025</title>
-<meta name="description" content="Guía realista para ganar dinero por Internet en 2025 sin estafas ni humo.">
+<meta name="description" content="Aprende las mejores formas reales de ganar dinero por Internet desde casa. Métodos probados y explicados paso a paso.">
 </head>
 <body>
 <h1>Cómo ganar dinero por Internet en 2025</h1>
 
-<p>Ganar dinero por Internet ya no es una promesa falsa. En 2025 existen modelos reales que permiten generar ingresos desde casa con un ordenador y conexión a Internet.</p>
+<p>Ganar dinero por Internet ya no es una promesa falsa. Hoy millones de personas generan ingresos reales usando su ordenador o móvil. Lo importante es elegir métodos legítimos y escalables.</p>
 
-<h2>¿Se puede ganar dinero online de verdad?</h2>
-<p>Sí. Empresas, bancos y plataformas digitales pagan miles de millones en publicidad, afiliados y tráfico. Si sabes canalizar esa atención, puedes ganar dinero.</p>
+<h2>1. Marketing de afiliados</h2>
+<p>Consiste en recomendar productos y ganar comisión por cada venta. Plataformas como Amazon, Hotmart o ClickBank pagan por cada cliente que envíes.</p>
 
-<h2>Formas reales de ganar dinero online</h2>
-<ul>
-<li>Crear una web y monetizarla con anuncios</li>
-<li>Marketing de afiliados</li>
-<li>Venta de cursos o ebooks</li>
-<li>Servicios freelance</li>
-</ul>
+<h2>2. Publicidad con Google AdSense</h2>
+<p>Si tienes una web o blog, puedes mostrar anuncios y ganar dinero cada vez que alguien los vea o haga clic. Es una de las formas más estables de ingresos pasivos.</p>
 
-<h2>El método más estable</h2>
-<p>La forma más segura es crear una web con contenido útil y monetizarla con Google AdSense. Cada visita vale dinero.</p>
+<h2>3. Freelancing</h2>
+<p>Trabajar como diseñador, redactor o programador en plataformas como Fiverr o Upwork permite ganar desde cualquier país.</p>
 
-<p>Eso es lo que estamos haciendo en Libertad Financiera.</p>
+<h2>4. Crear un blog o web</h2>
+<p>Un sitio web bien posicionado puede generar ingresos por años mediante anuncios, afiliados y productos propios.</p>
+
+<p>La clave está en empezar hoy y ser constante. Internet recompensa a quienes publican contenido útil.</p>
+
 </body>
 </html>
