--- a/que-es-adsense.html
+++ b/que-es-adsense.html
@@ -1,22 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8">
-<title>Qué es Google AdSense y cómo funciona</title>
-<meta name="description" content="Explicación sencilla de Google AdSense y cómo puedes ganar dinero con él.">
+<meta charset="UTF-8">
+<title>¿Qué es Google AdSense?</title>
+<meta name="description" content="Descubre qué es Google AdSense, cómo funciona y cómo puedes ganar dinero mostrando anuncios en tu web.">
 </head>
 <body>
-<h1>Qué es Google AdSense y cómo funciona</h1>
+<h1>¿Qué es Google AdSense?</h1>
 
-<p>Google AdSense es la plataforma que permite a los dueños de páginas web ganar dinero mostrando anuncios.</p>
+<p>Google AdSense es una plataforma que permite a los propietarios de sitios web ganar dinero mostrando anuncios en sus páginas.</p>
 
-<h2>Cómo se gana dinero</h2>
-<p>Cuando alguien visita tu web y ve o hace clic en un anuncio, Google te paga una parte de lo que el anunciante ha pagado.</p>
+<h2>¿Cómo funciona?</h2>
+<p>Google muestra anuncios relevantes para cada visitante. Si alguien hace clic o ve el anuncio, el dueño del sitio gana dinero.</p>
 
-<h2>Por qué es una gran oportunidad</h2>
-<p>Millones de empresas pagan a Google por publicidad. Tú solo necesitas una web con tráfico para recibir una parte de ese dinero.</p>
+<h2>¿Cuánto se puede ganar?</h2>
+<p>Depende del tráfico y del nicho. Algunos sitios ganan pocos dólares al mes, otros miles.</p>
 
-<h2>Cuánto paga</h2>
-<p>Dependiendo del tema, cada 1.000 visitas pueden generar entre 5€ y 50€ o más.</p>
+<h2>Ventajas de AdSense</h2>
+<ul>
+<li>No necesitas vender nada</li>
+<li>Google se encarga de los anunciantes</li>
+<li>Funciona de forma automática</li>
+</ul>
+
+<h2>Requisitos</h2>
+<p>Para usar AdSense necesitas una web con contenido original, páginas legales (privacidad, cookies, aviso legal) y tráfico real.</p>
+
 </body>
 </html>
