--- a/ingresos-pasivos.html
+++ b/ingresos-pasivos.html
@@ -1,30 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Ingresos pasivos: qué son y cómo crearlos</title>
-<meta name="description" content="Aprende qué son los ingresos pasivos y cómo construirlos para ganar dinero incluso mientras duermes.">
+  <meta charset="UTF-8">
+  <title>Ingresos pasivos: qué son y cómo empezar</title>
+  <meta name="description" content="Descubre qué son los ingresos pasivos, ejemplos reales y cómo empezar a generarlos en 2025.">
 </head>
-<body>
-<h1>Ingresos pasivos</h1>
+<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 16px; line-height: 1.6;">
 
-<p>Los ingresos pasivos son aquellos que sigues ganando aunque no estés trabajando activamente.</p>
+<h1>Ingresos pasivos: qué son y cómo empezar</h1>
+
+<p>Los ingresos pasivos son aquellos que se generan de forma automática o semiautomática, sin necesidad de trabajar activamente cada día. Aunque al principio requieren esfuerzo, una vez creados pueden generar dinero durante meses o incluso años.</p>
+
+<h2>¿Qué son los ingresos pasivos?</h2>
+
+<p>Se llaman “pasivos” porque no necesitas intercambiar tu tiempo directamente por dinero. A diferencia de un trabajo tradicional, donde cobras por horas trabajadas, los ingresos pasivos se generan aunque estés durmiendo.</p>
+
+<p>Por ejemplo: una web con anuncios, un curso online o un libro digital pueden seguir generando dinero sin que tengas que estar presente.</p>
 
 <h2>Ejemplos de ingresos pasivos</h2>
+
 <ul>
-<li>Publicidad en una web</li>
-<li>Afiliados</li>
-<li>Venta de cursos</li>
-<li>Inversiones</li>
+  <li>Páginas web monetizadas con Google AdSense</li>
+  <li>Marketing de afiliados</li>
+  <li>Libros electrónicos en Amazon</li>
+  <li>Cursos online</li>
+  <li>Canales de YouTube</li>
+  <li>Inversiones (acciones, ETFs, criptomonedas)</li>
 </ul>
 
-<h2>Cómo empezar</h2>
-<p>Crear una web es una de las mejores formas de generar ingresos pasivos. Una vez publicada, puede atraer visitas durante años.</p>
+<h2>Ingresos pasivos con una página web</h2>
 
-<h2>Por qué funcionan</h2>
-<p>Internet trabaja 24 horas al día para ti. Cada visita puede generar dinero sin esfuerzo adicional.</p>
+<p>Una de las formas más accesibles de crear ingresos pasivos es mediante una página web. Cuando tu web recibe visitas desde Google, puedes mostrar anuncios y ganar dinero por cada visita o clic.</p>
 
-<p>Los ingresos pasivos no son magia, pero sí una de las mejores formas de libertad financiera.</p>
+<p>Este es el modelo que estás construyendo ahora mismo: una web que publica contenido útil y que gana dinero con anuncios de Google AdSense.</p>
+
+<h2>¿Cuánto se puede ganar?</h2>
+
+<p>Depende del tráfico que tenga tu web. Una página con 1.000 visitas al día puede generar desde unos pocos euros hasta cientos al mes. Las webs grandes generan miles de euros mensuales.</p>
+
+<h2>¿Es difícil empezar?</h2>
+
+<p>No. Lo más importante es empezar. Muchas personas nunca crean nada porque creen que es complicado. Pero con una web sencilla, contenido útil y constancia, se puede crear una fuente de ingresos real.</p>
+
+<p>La clave está en publicar contenido que la gente busca en Google y dejar que el tráfico crezca con el tiempo.</p>
+
+<p>Internet recompensa a quienes crean valor. Hoy es el mejor momento para empezar.</p>
 
 </body>
 </html>
