--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 </html>
 <h2>Artículos</h2>
 <ul>
-  <li><a href="ganar-dinero-internet.html">Cómo ganar dinero por Internet</a></li>
-  <li><a href="que-es-adsense.html">Qué es Google AdSense</a></li>
-  <li><a href="ingresos-pasivos.html">Ingresos pasivos</a></li>
+ <li><a href="ganar-dinero-internet.html">Cómo ganar dinero por Internet en 2025</a></li>
+  <li><a href="que-es-adsense.html">¿Qué es Google AdSense y cómo funciona?</a></li>
+  <li><a href="ingresos-pasivos.html">Ingresos pasivos: qué son y cómo empezar</a></li>
+  <li><a href="crear-blog-rentable.html">Cómo crear un blog rentable paso a paso</a></li>
 </ul>
 <hr>
 <p>
