--- a/index.html
+++ b/index.html
@@ -1,37 +1,93 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+<meta charset="UTF-8">
+<title>Libertad Financiera – Aprende a ganar dinero online</title>
+<meta name="description" content="Guías reales para ganar dinero por Internet, crear ingresos pasivos y construir libertad financiera.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
      crossorigin="anonymous"></script>
-  <title>Libertad Financiera</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+body {
+    font-family: Arial, sans-serif;
+    background:#f4f6f8;
+    margin:0;
+    padding:0;
+}
+header {
+    background:#0a2540;
+    color:white;
+    padding:40px;
+    text-align:center;
+}
+section {
+    max-width:900px;
+    margin:auto;
+    padding:40px 20px;
+    background:white;
+}
+.card {
+    background:#f9fafb;
+    padding:20px;
+    margin:20px 0;
+    border-radius:10px;
+    box-shadow:0 0 10px rgba(0,0,0,0.05);
+}
+a {
+    color:#0a2540;
+    text-decoration:none;
+    font-weight:bold;
+}
+footer {
+    background:#0a2540;
+    color:white;
+    text-align:center;
+    padding:20px;
+}
+</style>
 </head>
-<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 0 16px; line-height: 1.6;">
-  <h1>Libertad Financiera</h1>
-  <p>Bienvenido. Esta es mi web para aprender y compartir cómo ganar dinero, ahorrar y crear ingresos online.</p>
 
-  <h2>Qué encontrarás aquí</h2>
-  <ul>
-    <li>Cómo ganar dinero en Internet</li>
-    <li>Ideas de ingresos pasivos</li>
-    <li>Cómo usar Google AdSense</li>
-    <li>Educación financiera para principiantes</li>
-  </ul>
+<body>
 
-  <p>Muy pronto empezaré a publicar artículos.</p>
+<header>
+<h1>Libertad Financiera</h1>
+<p>Aprende a ganar dinero por Internet y crear ingresos pasivos reales</p>
+</header>
+
+<section>
+<h2>¿Qué es Libertad Financiera?</h2>
+<p>Libertad Financiera es una web creada para enseñarte cómo ganar dinero online de forma honesta, usando métodos reales como páginas web, Google AdSense, afiliados y negocios digitales.</p>
+
+<div class="card">
+<h3>Cómo ganar dinero por Internet</h3>
+<p>Descubre los métodos que funcionan hoy en día para generar ingresos desde casa.</p>
+<a href="ganar-dinero-internet.html">Leer guía →</a>
+</div>
+
+<div class="card">
+<h3>¿Qué es Google AdSense?</h3>
+<p>Aprende cómo Google paga por mostrar anuncios en tu página web.</p>
+<a href="que-es-adsense.html">Leer explicación →</a>
+</div>
+
+<div class="card">
+<h3>Ingresos pasivos</h3>
+<p>Cómo construir sistemas que generen dinero incluso mientras duermes.</p>
+<a href="ingresos-pasivos.html">Ver ingresos pasivos →</a>
+</div>
+
+</section>
+
+<footer>
+<p>
+<a href="privacidad.html">Privacidad</a> | 
+<a href="cookies.html">Cookies</a> | 
+<a href="aviso-legal.html">Aviso legal</a>
+</p>
+<p>© 2025 Libertad Financiera</p>
+</footer>
+
 </body>
 </html>
-<h2>Artículos</h2>
-<ul>
- <li><a href="ganar-dinero-internet.html">Cómo ganar dinero por Internet en 2025</a></li>
-  <li><a href="que-es-adsense.html">¿Qué es Google AdSense y cómo funciona?</a></li>
-  <li><a href="ingresos-pasivos.html">Ingresos pasivos: qué son y cómo empezar</a></li>
-  <li><a href="crear-blog-rentable.html">Cómo crear un blog rentable paso a paso</a></li>
-</ul>
-<hr>
-<p>
-  <a href="privacidad.html">Privacidad</a> |
-  <a href="cookies.html">Cookies</a> |
-  <a href="aviso-legal.html">Aviso legal</a>
-</p>
