--- a/ganar-dinero-internet.html
+++ b/ganar-dinero-internet.html
@@ -2,27 +2,65 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Cómo ganar dinero por Internet en 2025</title>
-<meta name="description" content="Aprende las mejores formas reales de ganar dinero por Internet desde casa. Métodos probados y explicados paso a paso.">
+<title>Cómo ganar dinero por Internet</title>
+<meta name="description" content="Aprende las mejores formas reales de ganar dinero por Internet desde casa paso a paso.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+     crossorigin="anonymous"></script>
+
+<style>
+body {font-family: Arial, sans-serif; background:#f4f6f8; margin:0;}
+header {background:#0a2540; color:white; padding:40px; text-align:center;}
+section {max-width:900px; margin:auto; padding:40px; background:white;}
+a {color:#0a2540; text-decoration:none; font-weight:bold;}
+footer {background:#0a2540; color:white; text-align:center; padding:20px;}
+.nav a {color:white; margin:0 10px;}
+</style>
 </head>
+
 <body>
+
+<header>
+<h1>Libertad Financiera</h1>
+<p class="nav">
+  <a href="index.html">Inicio</a>
+  <a href="ganar-dinero-internet.html">Ganar dinero</a>
+  <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+  <a href="que-es-adsense.html">AdSense</a>
+</p>
+</header>
+
+<section>
+
 <h1>Cómo ganar dinero por Internet en 2025</h1>
 
-<p>Ganar dinero por Internet ya no es una promesa falsa. Hoy millones de personas generan ingresos reales usando su ordenador o móvil. Lo importante es elegir métodos legítimos y escalables.</p>
+<p>Ganar dinero por Internet ya no es una promesa falsa. Hoy millones de personas generan ingresos reales usando su ordenador o móvil.</p>
 
 <h2>1. Marketing de afiliados</h2>
 <p>Consiste en recomendar productos y ganar comisión por cada venta. Plataformas como Amazon, Hotmart o ClickBank pagan por cada cliente que envíes.</p>
 
 <h2>2. Publicidad con Google AdSense</h2>
-<p>Si tienes una web o blog, puedes mostrar anuncios y ganar dinero cada vez que alguien los vea o haga clic. Es una de las formas más estables de ingresos pasivos.</p>
+<p>Si tienes una web o blog, puedes mostrar anuncios y ganar dinero cada vez que alguien los vea o haga clic. Es una de las formas más estables.</p>
 
 <h2>3. Freelancing</h2>
 <p>Trabajar como diseñador, redactor o programador en plataformas como Fiverr o Upwork permite ganar desde cualquier país.</p>
 
 <h2>4. Crear un blog o web</h2>
-<p>Un sitio web bien posicionado puede generar ingresos por años mediante anuncios, afiliados y productos propios.</p>
+<p>Un sitio web bien posicionado puede generar ingresos durante años con anuncios, afiliados y productos propios.</p>
 
-<p>La clave está en empezar hoy y ser constante. Internet recompensa a quienes publican contenido útil.</p>
+<p>La clave es empezar hoy y ser constante.</p>
+
+</section>
+
+<footer>
+<p>
+<a href="privacidad.html">Privacidad</a> | 
+<a href="cookies.html">Cookies</a> | 
+<a href="aviso-legal.html">Aviso legal</a>
+</p>
+<p>© 2025 Libertad Financiera</p>
+</footer>
 
 </body>
 </html>
