--- a/que-es-adsense.html
+++ b/que-es-adsense.html
@@ -2,75 +2,48 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>¿Qué es Google AdSense y cómo funciona?</title>
-<meta name="description" content="Descubre qué es Google AdSense, cómo funciona y cómo puedes ganar dinero mostrando anuncios en tu página web.">
+<title>TITULO AQUI</title>
+<meta name="description" content="DESCRIPCION AQUI">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+     crossorigin="anonymous"></script>
+
+<style>
+body {font-family: Arial, sans-serif; background:#f4f6f8; margin:0; padding:0;}
+header {background:#0a2540; color:white; padding:40px; text-align:center;}
+section {max-width:900px; margin:auto; padding:40px 20px; background:white;}
+a {color:#0a2540; text-decoration:none; font-weight:bold;}
+footer {background:#0a2540; color:white; text-align:center; padding:20px;}
+.nav {margin-top:10px;}
+.nav a {color:white; margin:0 10px; font-weight:normal;}
+</style>
 </head>
-<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 16px; line-height: 1.6;">
 
-<h1>¿Qué es Google AdSense?</h1>
+<body>
 
-<p>Google AdSense es una plataforma de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en sus sitios. Estos anuncios son proporcionados por empresas que pagan a Google para aparecer en páginas relacionadas con su temática.</p>
-
-<p>Cuando una persona entra en tu web y ve o hace clic en un anuncio, tú ganas una parte de ese dinero. Google se encarga de mostrar los anuncios correctos y de cobrar a los anunciantes.</p>
-
-<h2>¿Cómo funciona Google AdSense?</h2>
-
-<p>El funcionamiento es muy simple:</p>
-
-<ul>
-<li>Creas una página web o blog.</li>
-<li>Solicitas una cuenta de Google AdSense.</li>
-<li>Cuando Google aprueba tu web, te da un código.</li>
-<li>Colocas ese código en tu página.</li>
-<li>Empiezan a aparecer anuncios automáticamente.</li>
-</ul>
-
-<p>Los anuncios se adaptan al contenido de tu web y a los intereses de los visitantes, por lo que tienen más probabilidades de generar ingresos.</p>
-
-<h2>¿Cuánto se puede ganar con AdSense?</h2>
-
-<p>No hay un límite fijo. Algunas webs ganan pocos euros al mes y otras ganan miles. Todo depende de:</p>
-
-<ul>
-<li>La cantidad de visitas que recibe tu web.</li>
-<li>El país de tus visitantes.</li>
-<li>El tema de tu página.</li>
-<li>La calidad del contenido.</li>
-</ul>
-
-<p>Las webs sobre finanzas, dinero, tecnología o negocios suelen pagar mejor que otros temas.</p>
-
-<h2>¿Es gratuito usar Google AdSense?</h2>
-
-<p>Sí. Crear una cuenta en Google AdSense es completamente gratis. No tienes que pagar nada para registrarte ni para mostrar anuncios en tu web.</p>
-
-<p>Google solo gana dinero cuando tú ganas dinero, ya que se quedan con una parte de lo que pagan los anunciantes.</p>
-
-<h2>¿Qué se necesita para usar AdSense?</h2>
-
-<p>Para que Google te apruebe necesitas:</p>
-
-<ul>
-<li>Una web real con contenido útil.</li>
-<li>Páginas legales como privacidad y cookies.</li>
-<li>Un dominio o subdominio accesible públicamente.</li>
-<li>No usar contenido copiado ni engañoso.</li>
-</ul>
-
-<h2>¿Vale la pena usar Google AdSense?</h2>
-
-<p>Para muchas personas, AdSense es una de las formas más fáciles de empezar a ganar dinero en Internet. Una vez que tu web recibe visitas, puedes generar ingresos de forma automática sin vender nada.</p>
-
-<p>Por eso muchos creadores de contenido, bloggers y dueños de páginas web lo utilizan como una fuente de ingresos pasivos.</p>
-
-<hr>
-
-<p>
-<a href="index.html">Inicio</a> |
-<a href="ganar-dinero-internet.html">Cómo ganar dinero</a> |
-<a href="ingresos-pasivos.html">Ingresos pasivos</a>
+<header>
+<h1>Libertad Financiera</h1>
+<p class="nav">
+  <a href="index.html">Inicio</a>
+  <a href="ganar-dinero-internet.html">Ganar dinero</a>
+  <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+  <a href="que-es-adsense.html">AdSense</a>
 </p>
+</header>
+
+<section>
+<!-- CONTENIDO -->
+</section>
+
+<footer>
+<p>
+<a href="privacidad.html">Privacidad</a> | 
+<a href="cookies.html">Cookies</a> | 
+<a href="aviso-legal.html">Aviso legal</a>
+</p>
+<p>© 2025 Libertad Financiera</p>
+</footer>
 
 </body>
 </html>
