--- a/que-es-adsense.html
+++ b/que-es-adsense.html
@@ -2,48 +2,82 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>TITULO AQUI</title>
-<meta name="description" content="DESCRIPCION AQUI">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
-     crossorigin="anonymous"></script>
-
-<style>
-body {font-family: Arial, sans-serif; background:#f4f6f8; margin:0; padding:0;}
-header {background:#0a2540; color:white; padding:40px; text-align:center;}
-section {max-width:900px; margin:auto; padding:40px 20px; background:white;}
-a {color:#0a2540; text-decoration:none; font-weight:bold;}
-footer {background:#0a2540; color:white; text-align:center; padding:20px;}
-.nav {margin-top:10px;}
-.nav a {color:white; margin:0 10px; font-weight:normal;}
-</style>
+<title>Qué es Google AdSense y cómo funciona en 2025</title>
+<meta name="description" content="Aprende qué es Google AdSense, cómo funciona y cómo ganar dinero mostrando anuncios en tu página web de forma legal y automática.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
+<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; line-height: 1.6; padding: 0 15px;">
 
-<header>
-<h1>Libertad Financiera</h1>
-<p class="nav">
-  <a href="index.html">Inicio</a>
-  <a href="ganar-dinero-internet.html">Ganar dinero</a>
-  <a href="ingresos-pasivos.html">Ingresos pasivos</a>
-  <a href="que-es-adsense.html">AdSense</a>
-</p>
-</header>
+<h1>¿Qué es Google AdSense?</h1>
 
-<section>
-<!-- CONTENIDO -->
-</section>
-
-<footer>
 <p>
-<a href="privacidad.html">Privacidad</a> | 
-<a href="cookies.html">Cookies</a> | 
-<a href="aviso-legal.html">Aviso legal</a>
+Google AdSense es la plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio.
+Estos anuncios son pagados por empresas que quieren promocionar sus productos y servicios.
 </p>
-<p>© 2025 Libertad Financiera</p>
-</footer>
+
+<p>
+Cuando una persona entra en tu web y ve o hace clic en uno de esos anuncios, tú ganas una parte del dinero que paga el anunciante.
+Google se encarga de mostrar los anuncios correctos y de gestionar los pagos.
+</p>
+
+<h2>¿Cómo funciona Google AdSense?</h2>
+
+<p>El proceso es muy sencillo:</p>
+
+<ul>
+<li>Creas una página web o blog.</li>
+<li>Solicitas una cuenta de Google AdSense.</li>
+<li>Cuando Google aprueba tu sitio, te da un código.</li>
+<li>Pegás ese código en tu web.</li>
+<li>Empiezan a aparecer anuncios automáticamente.</li>
+</ul>
+
+<p>
+Los anuncios se adaptan al contenido de tu web y a los intereses de cada visitante, lo que aumenta las probabilidades de generar ingresos.
+</p>
+
+<h2>¿Cuánto dinero se puede ganar con AdSense?</h2>
+
+<p>
+No existe un límite fijo. Algunas páginas ganan unos pocos euros al mes y otras ganan miles.
+Todo depende de:
+</p>
+
+<ul>
+<li>La cantidad de visitas que recibe tu web.</li>
+<li>El país de tus visitantes.</li>
+<li>La temática de tu sitio.</li>
+<li>La calidad de tu contenido.</li>
+</ul>
+
+<p>
+Las páginas sobre dinero, finanzas, tecnología y negocios suelen pagar mejor que otros temas.
+</p>
+
+<h2>¿Es gratuito usar Google AdSense?</h2>
+
+<p>
+Sí. Registrarse en Google AdSense es totalmente gratis.
+Google solo gana dinero cuando tú también lo haces, por lo que su interés es ayudarte a mostrar anuncios de calidad.
+</p>
+
+<h2>¿Es una buena forma de generar ingresos pasivos?</h2>
+
+<p>
+Sí. Una vez que tu web está creada y tiene visitas, los anuncios funcionan de forma automática.
+Esto te permite ganar dinero incluso mientras duermes, siempre que tu página siga recibiendo tráfico.
+</p>
+
+<p>
+Por eso AdSense es uno de los sistemas de monetización más usados en el mundo para webs y blogs.
+</p>
+
+<hr>
+
+<p>
+<a href="index.html">⬅ Volver a la página principal</a>
+</p>
 
 </body>
 </html>
