--- a/que-es-adsense.html
+++ b/que-es-adsense.html
@@ -2,22 +2,22 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Qué es Google AdSense y cómo funciona en 2025</title>
-<meta name="description" content="Aprende qué es Google AdSense, cómo funciona y cómo ganar dinero mostrando anuncios en tu página web de forma legal y automática.">
+<title>¿Qué es Google AdSense?</title>
+<meta name="description" content="Aprende qué es Google AdSense, cómo funciona y cuánto dinero se puede ganar con publicidad en una página web.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; line-height: 1.6; padding: 0 15px;">
+<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; line-height: 1.7; padding: 0 15px;">
 
 <h1>¿Qué es Google AdSense?</h1>
 
 <p>
-Google AdSense es la plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio.
+Google AdSense es la plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio.  
 Estos anuncios son pagados por empresas que quieren promocionar sus productos y servicios.
 </p>
 
 <p>
-Cuando una persona entra en tu web y ve o hace clic en uno de esos anuncios, tú ganas una parte del dinero que paga el anunciante.
+Cuando una persona entra en tu web y ve o hace clic en uno de esos anuncios, tú ganas una parte del dinero que paga el anunciante.  
 Google se encarga de mostrar los anuncios correctos y de gestionar los pagos.
 </p>
 
@@ -40,7 +40,7 @@ Los anuncios se adaptan al contenido de tu web y a los intereses de cada visitan
 <h2>¿Cuánto dinero se puede ganar con AdSense?</h2>
 
 <p>
-No existe un límite fijo. Algunas páginas ganan unos pocos euros al mes y otras ganan miles.
+No existe un límite fijo. Algunas páginas ganan unos pocos euros al mes y otras ganan miles.  
 Todo depende de:
 </p>
 
@@ -58,25 +58,15 @@ Las páginas sobre dinero, finanzas, tecnología y negocios suelen pagar mejor q
 <h2>¿Es gratuito usar Google AdSense?</h2>
 
 <p>
-Sí. Registrarse en Google AdSense es totalmente gratis.
-Google solo gana dinero cuando tú también lo haces, por lo que su interés es ayudarte a mostrar anuncios de calidad.
-</p>
-
-<h2>¿Es una buena forma de generar ingresos pasivos?</h2>
-
-<p>
-Sí. Una vez que tu web está creada y tiene visitas, los anuncios funcionan de forma automática.
-Esto te permite ganar dinero incluso mientras duermes, siempre que tu página siga recibiendo tráfico.
-</p>
-
-<p>
-Por eso AdSense es uno de los sistemas de monetización más usados en el mundo para webs y blogs.
+Sí. Registrarse en Google AdSense es totalmente gratis. Google solo gana dinero cuando tú también lo haces, por lo que su interés es que tu web tenga éxito.
 </p>
 
 <hr>
 
 <p>
-<a href="index.html">⬅ Volver a la página principal</a>
+<a href="index.html">Volver a inicio</a> |
+<a href="ganar-dinero-internet.html">Cómo ganar dinero por Internet</a> |
+<a href="ingresos-pasivos.html">Ingresos pasivos</a>
 </p>
 
 </body>
