--- a/que-es-adsense.html
+++ b/que-es-adsense.html
@@ -2,22 +2,60 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>¿Qué es Google AdSense?</title>
-<meta name="description" content="Aprende qué es Google AdSense, cómo funciona y cuánto dinero se puede ganar con publicidad en una página web.">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+<title>¿Qué es Google AdSense? – Libertad Financiera</title>
+<meta name="description" content="Descubre qué es Google AdSense, cómo funciona y cuánto dinero puedes ganar con anuncios en tu web.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; line-height: 1.7; padding: 0 15px;">
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f6f8;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+}
+
+.container {
+  max-width: 900px;
+  margin: 40px auto;
+  background: white;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.05);
+}
+
+h1, h2 {
+  color: #0d47a1;
+}
+
+a {
+  color: #0d47a1;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+ul {
+  margin-left: 20px;
+}
+</style>
+
+</head>
+<body>
+
+<div class="container">
 
 <h1>¿Qué es Google AdSense?</h1>
 
 <p>
-Google AdSense es la plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio.  
+Google AdSense es la plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio. 
 Estos anuncios son pagados por empresas que quieren promocionar sus productos y servicios.
 </p>
 
 <p>
-Cuando una persona entra en tu web y ve o hace clic en uno de esos anuncios, tú ganas una parte del dinero que paga el anunciante.  
+Cuando una persona entra en tu web y ve o hace clic en uno de esos anuncios, tú ganas una parte del dinero que paga el anunciante. 
 Google se encarga de mostrar los anuncios correctos y de gestionar los pagos.
 </p>
 
@@ -26,11 +64,11 @@ Google se encarga de mostrar los anuncios correctos y de gestionar los pagos.
 <p>El proceso es muy sencillo:</p>
 
 <ul>
-<li>Creas una página web o blog.</li>
-<li>Solicitas una cuenta de Google AdSense.</li>
-<li>Cuando Google aprueba tu sitio, te da un código.</li>
-<li>Pegás ese código en tu web.</li>
-<li>Empiezan a aparecer anuncios automáticamente.</li>
+  <li>Creas una página web o blog.</li>
+  <li>Solicitas una cuenta de Google AdSense.</li>
+  <li>Cuando Google aprueba tu sitio, te da un código.</li>
+  <li>Pegás ese código en tu web.</li>
+  <li>Empiezan a aparecer anuncios automáticamente.</li>
 </ul>
 
 <p>
@@ -40,34 +78,38 @@ Los anuncios se adaptan al contenido de tu web y a los intereses de cada visitan
 <h2>¿Cuánto dinero se puede ganar con AdSense?</h2>
 
 <p>
-No existe un límite fijo. Algunas páginas ganan unos pocos euros al mes y otras ganan miles.  
-Todo depende de:
+No existe un límite fijo. Algunas páginas ganan unos pocos euros al mes y otras ganan miles. Todo depende de:
 </p>
 
 <ul>
-<li>La cantidad de visitas que recibe tu web.</li>
-<li>El país de tus visitantes.</li>
-<li>La temática de tu sitio.</li>
-<li>La calidad de tu contenido.</li>
+  <li>La cantidad de visitas que recibe tu web.</li>
+  <li>El país de tus visitantes.</li>
+  <li>La temática de tu sitio.</li>
+  <li>La calidad de tu contenido.</li>
 </ul>
 
 <p>
 Las páginas sobre dinero, finanzas, tecnología y negocios suelen pagar mejor que otros temas.
 </p>
 
-<h2>¿Es gratuito usar Google AdSense?</h2>
+<h2>¿Es gratis usar Google AdSense?</h2>
 
 <p>
-Sí. Registrarse en Google AdSense es totalmente gratis. Google solo gana dinero cuando tú también lo haces, por lo que su interés es que tu web tenga éxito.
+Sí. Registrarse en Google AdSense es totalmente gratis. Google solo gana dinero cuando tú también lo haces, por lo que su interés es ayudarte a ganar más.
+</p>
+
+<p>
+Si creas contenido útil y consigues tráfico desde Google, AdSense puede convertirse en una fuente de ingresos estable a largo plazo.
 </p>
 
 <hr>
 
 <p>
-<a href="index.html">Volver a inicio</a> |
-<a href="ganar-dinero-internet.html">Cómo ganar dinero por Internet</a> |
-<a href="ingresos-pasivos.html">Ingresos pasivos</a>
+<a href="index.html">Volver a la página principal</a>
 </p>
+
+</div>
 
 </body>
 </html>
+
