--- a/que-es-adsense.html
+++ b/que-es-adsense.html
@@ -2,72 +2,44 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>¿Qué es Google AdSense? | Libertad Financiera</title>
+<title>Qué es Google AdSense y cómo ganar dinero con anuncios</title>
 <meta name="description" content="Descubre qué es Google AdSense, cómo funciona y cuánto dinero puedes ganar mostrando anuncios en tu página web.">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+     crossorigin="anonymous"></script>
 
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #f4f6f8;
-}
-
-header {
-  background: #0a2342;
-  padding: 20px;
-  text-align: center;
-  color: white;
-}
-
-nav a {
-  color: white;
-  margin: 0 15px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.container {
-  max-width: 900px;
-  margin: 40px auto;
-  background: white;
-  padding: 40px;
-  border-radius: 8px;
-}
-
-h1, h2 {
-  color: #0a2342;
-}
-
-footer {
-  background: #0a2342;
-  color: white;
-  text-align: center;
-  padding: 20px;
-  margin-top: 40px;
-}
+body {font-family: Arial, sans-serif; background:#f4f6f8; margin:0; padding:0;}
+header {background:#0a2540; color:white; padding:40px; text-align:center;}
+section {max-width:900px; margin:auto; padding:40px 20px; background:white;}
+a {color:#0a2540; text-decoration:none; font-weight:bold;}
+footer {background:#0a2540; color:white; text-align:center; padding:20px;}
+.nav {margin-top:10px;}
+.nav a {color:white; margin:0 10px; font-weight:normal;}
+h2 {color:#0a2540;}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>Libertad Financiera</h1>
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="ganar-dinero-internet.html">Ganar dinero</a>
-    <a href="ingresos-pasivos.html">Ingresos pasivos</a>
-    <a href="que-es-adsense.html">AdSense</a>
-  </nav>
+<h1>Libertad Financiera</h1>
+<p class="nav">
+  <a href="index.html">Inicio</a>
+  <a href="ganar-dinero-internet.html">Ganar dinero</a>
+  <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+  <a href="que-es-adsense.html">AdSense</a>
+</p>
 </header>
 
-<div class="container">
+<section>
 
 <h1>¿Qué es Google AdSense?</h1>
 
-<p>Google AdSense es la plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio. Estos anuncios los pagan empresas que quieren promocionar sus productos y servicios.</p>
+<p>Google AdSense es la plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio. Estos anuncios son pagados por empresas que quieren promocionar sus productos o servicios.</p>
 
-<p>Cuando una persona entra en tu web y ve o hace clic en un anuncio, tú ganas una parte del dinero que paga el anunciante. Google se encarga de mostrar los anuncios correctos y de gestionar los pagos.</p>
+<p>Cuando una persona entra en tu web y ve o hace clic en uno de esos anuncios, tú ganas una parte del dinero que paga el anunciante. Google se encarga de mostrar los anuncios correctos y de gestionar los pagos.</p>
 
 <h2>¿Cómo funciona Google AdSense?</h2>
 
@@ -77,7 +49,7 @@ footer {
 <li>Creas una página web o blog.</li>
 <li>Solicitas una cuenta de Google AdSense.</li>
 <li>Cuando Google aprueba tu sitio, te da un código.</li>
-<li>Pegás ese código en tu web.</li>
+<li>Pegas ese código en tu web.</li>
 <li>Empiezan a aparecer anuncios automáticamente.</li>
 </ul>
 
@@ -98,12 +70,17 @@ footer {
 
 <h2>¿Es gratis usar Google AdSense?</h2>
 
-<p>Sí. Registrarse en Google AdSense es totalmente gratis. Google solo gana dinero cuando tú también lo haces, por lo que sus intereses están alineados con los tuyos.</p>
+<p>Sí. Registrarse en Google AdSense es totalmente gratis. Google solo gana dinero cuando tú también lo haces, por lo que su objetivo es ayudarte a mostrar anuncios que generen ingresos.</p>
 
-</div>
+</section>
 
 <footer>
-  <p>© 2025 Libertad Financiera</p>
+<p>
+<a href="privacidad.html">Privacidad</a> | 
+<a href="cookies.html">Cookies</a> | 
+<a href="aviso-legal.html">Aviso legal</a>
+</p>
+<p>© 2025 Libertad Financiera</p>
 </footer>
 
 </body>
