--- a/index.html
+++ b/index.html
@@ -1,93 +1,121 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Libertad Financiera – Aprende a ganar dinero online</title>
-<meta name="description" content="Guías reales para ganar dinero por Internet, crear ingresos pasivos y construir libertad financiera.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>Libertad Financiera | Ideas para ganar dinero online</title>
+  <meta name="description" content="Aprende a ganar dinero por Internet, crear ingresos pasivos y usar AdSense con guías sencillas para empezar desde cero." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
 
-<style>
-body {
-    font-family: Arial, sans-serif;
-    background:#f4f6f8;
-    margin:0;
-    padding:0;
-}
-header {
-    background:#0a2540;
-    color:white;
-    padding:40px;
-    text-align:center;
-}
-section {
-    max-width:900px;
-    margin:auto;
-    padding:40px 20px;
-    background:white;
-}
-.card {
-    background:#f9fafb;
-    padding:20px;
-    margin:20px 0;
-    border-radius:10px;
-    box-shadow:0 0 10px rgba(0,0,0,0.05);
-}
-a {
-    color:#0a2540;
-    text-decoration:none;
-    font-weight:bold;
-}
-footer {
-    background:#0a2540;
-    color:white;
-    text-align:center;
-    padding:20px;
-}
-</style>
+  <style>
+    :root{
+      --nav:#0a2540;
+      --bg:#f4f6f8;
+      --text:#0b1220;
+      --muted:#4b5563;
+      --card:#ffffff;
+      --radius:14px;
+      --shadow:0 10px 25px rgba(10,37,64,.08);
+    }
+    *{box-sizing:border-box}
+    body{font-family:Arial, sans-serif; background:var(--bg); margin:0; color:var(--text); line-height:1.65;}
+    header{background:var(--nav); color:#fff; padding:44px 20px; text-align:center;}
+    header h1{margin:0 0 6px; font-size:40px; letter-spacing:.2px}
+    header p{margin:0; opacity:.9}
+    .nav{margin-top:14px}
+    .nav a{color:#fff; margin:0 10px; text-decoration:none; font-weight:600; opacity:.95}
+    .nav a:hover{opacity:1; text-decoration:underline}
+
+    main{max-width:980px; margin:28px auto; padding:0 16px;}
+    .card{background:var(--card); border-radius:var(--radius); box-shadow:var(--shadow); padding:34px 22px;}
+    h2{margin:0 0 10px; font-size:26px}
+    p{margin:10px 0}
+    ul{margin:10px 0 0 18px}
+    li{margin:6px 0}
+    .grid{display:grid; grid-template-columns:repeat(3, 1fr); gap:14px; margin-top:18px}
+    .box{background:#fff; border-radius:12px; padding:16px; border:1px solid rgba(10,37,64,.08)}
+    .box h3{margin:0 0 8px; font-size:18px}
+    .muted{color:var(--muted)}
+    a{color:var(--nav); text-decoration:none; font-weight:700}
+    a:hover{text-decoration:underline}
+
+    footer{background:var(--nav); color:#fff; text-align:center; padding:18px 16px; margin-top:26px}
+    footer a{color:#fff; text-decoration:none; font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55; margin:0 8px}
+
+    @media (max-width:850px){
+      header h1{font-size:34px}
+      .grid{grid-template-columns:1fr}
+    }
+  </style>
 </head>
 
 <body>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p>Guías simples para ganar dinero online, crear ingresos pasivos y empezar con AdSense.</p>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<header>
-<h1>Libertad Financiera</h1>
-<p>Aprende a ganar dinero por Internet y crear ingresos pasivos reales</p>
-</header>
+  <main>
+    <section class="card">
+      <h2>Bienvenido</h2>
+      <p class="muted">
+        Esta es mi web para aprender y compartir cómo ganar dinero, ahorrar y crear ingresos online.
+        Aquí encontrarás ideas claras, sin humo, para empezar paso a paso.
+      </p>
 
-<section>
-<h2>¿Qué es Libertad Financiera?</h2>
-<p>Libertad Financiera es una web creada para enseñarte cómo ganar dinero online de forma honesta, usando métodos reales como páginas web, Google AdSense, afiliados y negocios digitales.</p>
+      <h2>Qué encontrarás aquí</h2>
+      <ul>
+        <li>Cómo ganar dinero por Internet (métodos reales y escalables)</li>
+        <li>Ideas de ingresos pasivos y cómo empezar</li>
+        <li>Cómo usar Google AdSense para monetizar</li>
+        <li>Consejos básicos de educación financiera</li>
+      </ul>
 
-<div class="card">
-<h3>Cómo ganar dinero por Internet</h3>
-<p>Descubre los métodos que funcionan hoy en día para generar ingresos desde casa.</p>
-<a href="ganar-dinero-internet.html">Leer guía →</a>
-</div>
+      <div class="grid">
+        <div class="box">
+          <h3>Guía: Ganar dinero</h3>
+          <p class="muted">Métodos probados para empezar en 2025.</p>
+          <a href="ganar-dinero-internet.html">Leer guía →</a>
+        </div>
+        <div class="box">
+          <h3>Ingresos pasivos</h3>
+          <p class="muted">Ideas y ejemplos para construir ingresos a largo plazo.</p>
+          <a href="ingresos-pasivos.html">Ver ideas →</a>
+        </div>
+        <div class="box">
+          <h3>Qué es AdSense</h3>
+          <p class="muted">Cómo funciona, cuánto paga y requisitos básicos.</p>
+          <a href="que-es-adsense.html">Aprender →</a>
+        </div>
+      </div>
 
-<div class="card">
-<h3>¿Qué es Google AdSense?</h3>
-<p>Aprende cómo Google paga por mostrar anuncios en tu página web.</p>
-<a href="que-es-adsense.html">Leer explicación →</a>
-</div>
+      <h2 style="margin-top:22px;">Más artículos</h2>
+      <ul>
+        <li><a href="crear-blog-rentable.html">Cómo crear un blog rentable</a></li>
+        <li><a href="crear-web-para-ganar-dinero.html">Crear una web para ganar dinero</a></li>
+      </ul>
 
-<div class="card">
-<h3>Ingresos pasivos</h3>
-<p>Cómo construir sistemas que generen dinero incluso mientras duermes.</p>
-<a href="ingresos-pasivos.html">Ver ingresos pasivos →</a>
-</div>
+      <p class="muted" style="margin-top:16px;">Muy pronto añadiré más artículos.</p>
+    </section>
+  </main>
 
-</section>
-
-<footer>
-<p>
-<a href="privacidad.html">Privacidad</a> | 
-<a href="cookies.html">Cookies</a> | 
-<a href="aviso-legal.html">Aviso legal</a>
-</p>
-<p>© 2025 Libertad Financiera</p>
-</footer>
-
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
