--- a/ganar-dinero-internet.html
+++ b/ganar-dinero-internet.html
@@ -1,66 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Cómo ganar dinero por Internet</title>
-<meta name="description" content="Aprende las mejores formas reales de ganar dinero por Internet desde casa paso a paso.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>Cómo ganar dinero por Internet en 2025 | Libertad Financiera</title>
+  <meta name="description" content="Aprende las mejores formas reales de ganar dinero por Internet desde casa. Métodos probados y explicados paso a paso." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
 
-<style>
-body {font-family: Arial, sans-serif; background:#f4f6f8; margin:0;}
-header {background:#0a2540; color:white; padding:40px; text-align:center;}
-section {max-width:900px; margin:auto; padding:40px; background:white;}
-a {color:#0a2540; text-decoration:none; font-weight:bold;}
-footer {background:#0a2540; color:white; text-align:center; padding:20px;}
-.nav a {color:white; margin:0 10px;}
-</style>
+  <style>
+    :root{--nav:#0a2540;--bg:#f4f6f8;--text:#0b1220;--muted:#4b5563;--card:#fff;--radius:14px;--shadow:0 10px 25px rgba(10,37,64,.08)}
+    *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;background:var(--bg);margin:0;color:var(--text);line-height:1.75}
+    header{background:var(--nav);color:#fff;padding:44px 20px;text-align:center}
+    header h1{margin:0 0 6px;font-size:40px}
+    header p{margin:0;opacity:.9}
+    .nav{margin-top:14px}
+    .nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:600;opacity:.95}
+    .nav a:hover{opacity:1;text-decoration:underline}
+    main{max-width:980px;margin:28px auto;padding:0 16px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:34px 22px}
+    h2{margin:22px 0 8px;font-size:24px}
+    h3{margin:16px 0 6px;font-size:18px}
+    p{margin:10px 0}
+    ul{margin:10px 0 0 18px}
+    li{margin:6px 0}
+    a{color:var(--nav);text-decoration:none;font-weight:700}
+    a:hover{text-decoration:underline}
+    .muted{color:var(--muted)}
+    footer{background:var(--nav);color:#fff;text-align:center;padding:18px 16px;margin-top:26px}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55;margin:0 8px}
+    @media (max-width:850px){header h1{font-size:34px}}
+  </style>
 </head>
 
 <body>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<header>
-<h1>Libertad Financiera</h1>
-<p class="nav">
-  <a href="index.html">Inicio</a>
-  <a href="ganar-dinero-internet.html">Ganar dinero</a>
-  <a href="ingresos-pasivos.html">Ingresos pasivos</a>
-  <a href="que-es-adsense.html">AdSense</a>
-</p>
-</header>
+  <main>
+    <section class="card">
+      <h2>Cómo ganar dinero por Internet en 2025</h2>
+      <p class="muted">
+        Ganar dinero por Internet ya no es una promesa falsa. Hoy millones de personas generan ingresos reales usando su ordenador o móvil.
+        Lo importante es elegir métodos legítimos y escalables.
+      </p>
 
-<section>
+      <h2>1. Marketing de afiliados</h2>
+      <p>Consiste en recomendar productos y ganar comisión por cada venta. Plataformas como Amazon, Hotmart o ClickBank pagan por cada cliente que envíes.</p>
 
-<h1>Cómo ganar dinero por Internet en 2025</h1>
+      <h2>2. Publicidad con Google AdSense</h2>
+      <p>Si tienes una web o blog, puedes mostrar anuncios y ganar dinero cada vez que alguien los vea o haga clic. Es una de las formas más estables.</p>
 
-<p>Ganar dinero por Internet ya no es una promesa falsa. Hoy millones de personas generan ingresos reales usando su ordenador o móvil.</p>
+      <h2>3. Freelancing</h2>
+      <p>Trabajar como diseñador, redactor o programador en plataformas como Fiverr o Upwork permite ganar desde cualquier país.</p>
 
-<h2>1. Marketing de afiliados</h2>
-<p>Consiste en recomendar productos y ganar comisión por cada venta. Plataformas como Amazon, Hotmart o ClickBank pagan por cada cliente que envíes.</p>
+      <h2>4. Crear un blog o web</h2>
+      <p>Un sitio web bien posicionado puede generar ingresos durante años con anuncios, afiliados y productos propios.</p>
 
-<h2>2. Publicidad con Google AdSense</h2>
-<p>Si tienes una web o blog, puedes mostrar anuncios y ganar dinero cada vez que alguien los vea o haga clic. Es una de las formas más estables.</p>
+      <p class="muted">La clave está en empezar hoy y ser constante. Internet recompensa a quienes publican contenido útil.</p>
+    </section>
+  </main>
 
-<h2>3. Freelancing</h2>
-<p>Trabajar como diseñador, redactor o programador en plataformas como Fiverr o Upwork permite ganar desde cualquier país.</p>
-
-<h2>4. Crear un blog o web</h2>
-<p>Un sitio web bien posicionado puede generar ingresos durante años con anuncios, afiliados y productos propios.</p>
-
-<p>La clave es empezar hoy y ser constante.</p>
-
-</section>
-
-<footer>
-<p>
-<a href="privacidad.html">Privacidad</a> | 
-<a href="cookies.html">Cookies</a> | 
-<a href="aviso-legal.html">Aviso legal</a>
-</p>
-<p>© 2025 Libertad Financiera</p>
-</footer>
-
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
