--- a/ingresos-pasivos.html
+++ b/ingresos-pasivos.html
@@ -1,50 +1,100 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Ingresos pasivos: qué son y cómo empezar</title>
-  <meta name="description" content="Descubre qué son los ingresos pasivos, ejemplos reales y cómo empezar a generarlos en 2025.">
+  <meta charset="UTF-8" />
+  <title>Ingresos pasivos: qué son y cómo empezar | Libertad Financiera</title>
+  <meta name="description" content="Qué son los ingresos pasivos, ejemplos reales y cómo empezar a construirlos con web, afiliados, productos digitales e inversión." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
+
+  <style>
+    :root{--nav:#0a2540;--bg:#f4f6f8;--text:#0b1220;--muted:#4b5563;--card:#fff;--radius:14px;--shadow:0 10px 25px rgba(10,37,64,.08)}
+    *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;background:var(--bg);margin:0;color:var(--text);line-height:1.75}
+    header{background:var(--nav);color:#fff;padding:44px 20px;text-align:center}
+    header h1{margin:0 0 6px;font-size:40px}
+    .nav{margin-top:14px}
+    .nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:600;opacity:.95}
+    .nav a:hover{opacity:1;text-decoration:underline}
+    main{max-width:980px;margin:28px auto;padding:0 16px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:34px 22px}
+    h2{margin:22px 0 8px;font-size:24px}
+    p{margin:10px 0}
+    ul{margin:10px 0 0 18px}
+    li{margin:6px 0}
+    .muted{color:var(--muted)}
+    footer{background:var(--nav);color:#fff;text-align:center;padding:18px 16px;margin-top:26px}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55;margin:0 8px}
+    @media (max-width:850px){header h1{font-size:34px}}
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 16px; line-height: 1.6;">
 
-<h1>Ingresos pasivos: qué son y cómo empezar</h1>
+<body>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<p>Los ingresos pasivos son aquellos que se generan de forma automática o semiautomática, sin necesidad de trabajar activamente cada día. Aunque al principio requieren esfuerzo, una vez creados pueden generar dinero durante meses o incluso años.</p>
+  <main>
+    <section class="card">
+      <h2>Ingresos pasivos: qué son y cómo empezar</h2>
+      <p class="muted">
+        Los ingresos pasivos son aquellos que se generan de forma automática o semiautomática, sin necesidad de trabajar activamente cada día.
+        Aunque al principio requieren esfuerzo, una vez creados pueden generar dinero durante meses o incluso años.
+      </p>
 
-<h2>¿Qué son los ingresos pasivos?</h2>
+      <h2>¿Qué son los ingresos pasivos?</h2>
+      <p>
+        Se llaman “pasivos” porque no necesitas intercambiar tu tiempo directamente por dinero. A diferencia de un trabajo tradicional,
+        donde cobras por horas trabajadas, los ingresos pasivos se generan aunque estés durmiendo.
+      </p>
+      <p>
+        Por ejemplo: una web con anuncios, un curso online o un libro digital pueden seguir generando dinero sin que tengas que estar presente.
+      </p>
 
-<p>Se llaman “pasivos” porque no necesitas intercambiar tu tiempo directamente por dinero. A diferencia de un trabajo tradicional, donde cobras por horas trabajadas, los ingresos pasivos se generan aunque estés durmiendo.</p>
+      <h2>Ejemplos de ingresos pasivos</h2>
+      <ul>
+        <li>Páginas web monetizadas con Google AdSense</li>
+        <li>Marketing de afiliados</li>
+        <li>Libros electrónicos en Amazon</li>
+        <li>Cursos online</li>
+        <li>Canales de YouTube</li>
+        <li>Inversiones (acciones, ETFs, criptomonedas)</li>
+      </ul>
 
-<p>Por ejemplo: una web con anuncios, un curso online o un libro digital pueden seguir generando dinero sin que tengas que estar presente.</p>
+      <h2>Ingresos pasivos con una página web</h2>
+      <p>
+        Una de las formas más accesibles de crear ingresos pasivos es mediante una página web. Cuando tu web recibe visitas desde Google,
+        puedes mostrar anuncios y ganar dinero por cada visita o clic.
+      </p>
+      <p class="muted">
+        Este es el modelo que estás construyendo ahora mismo: una web que publica contenido útil y gana dinero con anuncios.
+      </p>
 
-<h2>Ejemplos de ingresos pasivos</h2>
+      <h2>¿Cuánto se puede ganar?</h2>
+      <p>
+        Depende del tráfico que tenga tu web y del país/tema. Una página con 1.000 visitas al día puede generar desde unos pocos euros
+        hasta cantidades mayores si el nicho paga bien.
+      </p>
+    </section>
+  </main>
 
-<ul>
-  <li>Páginas web monetizadas con Google AdSense</li>
-  <li>Marketing de afiliados</li>
-  <li>Libros electrónicos en Amazon</li>
-  <li>Cursos online</li>
-  <li>Canales de YouTube</li>
-  <li>Inversiones (acciones, ETFs, criptomonedas)</li>
-</ul>
-
-<h2>Ingresos pasivos con una página web</h2>
-
-<p>Una de las formas más accesibles de crear ingresos pasivos es mediante una página web. Cuando tu web recibe visitas desde Google, puedes mostrar anuncios y ganar dinero por cada visita o clic.</p>
-
-<p>Este es el modelo que estás construyendo ahora mismo: una web que publica contenido útil y que gana dinero con anuncios de Google AdSense.</p>
-
-<h2>¿Cuánto se puede ganar?</h2>
-
-<p>Depende del tráfico que tenga tu web. Una página con 1.000 visitas al día puede generar desde unos pocos euros hasta cientos al mes. Las webs grandes generan miles de euros mensuales.</p>
-
-<h2>¿Es difícil empezar?</h2>
-
-<p>No. Lo más importante es empezar. Muchas personas nunca crean nada porque creen que es complicado. Pero con una web sencilla, contenido útil y constancia, se puede crear una fuente de ingresos real.</p>
-
-<p>La clave está en publicar contenido que la gente busca en Google y dejar que el tráfico crezca con el tiempo.</p>
-
-<p>Internet recompensa a quienes crean valor. Hoy es el mejor momento para empezar.</p>
-
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
