--- a/que-es-adsense.html
+++ b/que-es-adsense.html
@@ -1,88 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Qué es Google AdSense y cómo ganar dinero con anuncios</title>
-<meta name="description" content="Descubre qué es Google AdSense, cómo funciona y cuánto dinero puedes ganar mostrando anuncios en tu página web.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>¿Qué es Google AdSense? | Libertad Financiera</title>
+  <meta name="description" content="Descubre qué es Google AdSense, cómo funciona, cuánto paga y cómo empezar a monetizar tu web con anuncios." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
 
-<style>
-body {font-family: Arial, sans-serif; background:#f4f6f8; margin:0; padding:0;}
-header {background:#0a2540; color:white; padding:40px; text-align:center;}
-section {max-width:900px; margin:auto; padding:40px 20px; background:white;}
-a {color:#0a2540; text-decoration:none; font-weight:bold;}
-footer {background:#0a2540; color:white; text-align:center; padding:20px;}
-.nav {margin-top:10px;}
-.nav a {color:white; margin:0 10px; font-weight:normal;}
-h2 {color:#0a2540;}
-</style>
+  <style>
+    :root{--nav:#0a2540;--bg:#f4f6f8;--text:#0b1220;--muted:#4b5563;--card:#fff;--radius:14px;--shadow:0 10px 25px rgba(10,37,64,.08)}
+    *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;background:var(--bg);margin:0;color:var(--text);line-height:1.75}
+    header{background:var(--nav);color:#fff;padding:44px 20px;text-align:center}
+    header h1{margin:0 0 6px;font-size:40px}
+    .nav{margin-top:14px}
+    .nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:600;opacity:.95}
+    .nav a:hover{opacity:1;text-decoration:underline}
+    main{max-width:980px;margin:28px auto;padding:0 16px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:34px 22px}
+    h2{margin:22px 0 8px;font-size:24px}
+    h3{margin:16px 0 6px;font-size:18px}
+    p{margin:10px 0}
+    ul{margin:10px 0 0 18px}
+    li{margin:6px 0}
+    .muted{color:var(--muted)}
+    footer{background:var(--nav);color:#fff;text-align:center;padding:18px 16px;margin-top:26px}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55;margin:0 8px}
+    @media (max-width:850px){header h1{font-size:34px}}
+  </style>
 </head>
 
 <body>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<header>
-<h1>Libertad Financiera</h1>
-<p class="nav">
-  <a href="index.html">Inicio</a>
-  <a href="ganar-dinero-internet.html">Ganar dinero</a>
-  <a href="ingresos-pasivos.html">Ingresos pasivos</a>
-  <a href="que-es-adsense.html">AdSense</a>
-</p>
-</header>
+  <main>
+    <section class="card">
+      <h2>¿Qué es Google AdSense?</h2>
+      <p>
+        Google AdSense es una plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio.
+        Estos anuncios son pagados por empresas que quieren promocionar sus productos y servicios.
+      </p>
+      <p class="muted">
+        Cuando una persona entra en tu web y ve o hace clic en un anuncio, tú ganas una parte del dinero que paga el anunciante.
+        Google se encarga de mostrar anuncios relevantes y de gestionar los pagos.
+      </p>
 
-<section>
+      <h2>¿Cómo funciona Google AdSense?</h2>
+      <p>El proceso es muy sencillo:</p>
+      <ul>
+        <li>Creas una página web o blog.</li>
+        <li>Solicitas una cuenta de Google AdSense.</li>
+        <li>Cuando Google aprueba tu sitio, te da un código.</li>
+        <li>Pegas ese código en tu web.</li>
+        <li>Empiezan a aparecer anuncios automáticamente.</li>
+      </ul>
+      <p class="muted">
+        Los anuncios se adaptan al contenido de tu web y a los intereses de cada visitante, lo que aumenta las probabilidades de generar ingresos.
+      </p>
 
-<h1>¿Qué es Google AdSense?</h1>
+      <h2>¿Cuánto dinero se puede ganar con AdSense?</h2>
+      <p>
+        No existe un límite fijo. Algunas páginas ganan unos pocos euros al mes y otras ganan miles. Todo depende de:
+      </p>
+      <ul>
+        <li>La cantidad de visitas que recibe tu web.</li>
+        <li>El país de tus visitantes.</li>
+        <li>La temática de tu sitio.</li>
+        <li>La calidad de tu contenido.</li>
+      </ul>
+      <p class="muted">
+        Las páginas sobre dinero, finanzas, tecnología y negocios suelen pagar mejor que otros temas.
+      </p>
 
-<p>Google AdSense es la plataforma de publicidad de Google que permite a los propietarios de páginas web ganar dinero mostrando anuncios en su sitio. Estos anuncios son pagados por empresas que quieren promocionar sus productos o servicios.</p>
+      <h2>¿Es gratis usar Google AdSense?</h2>
+      <p>
+        Sí. Registrarse en Google AdSense es gratuito. Google solo gana dinero cuando tú también lo haces, por lo que su interés es ayudarte a monetizar.
+      </p>
+    </section>
+  </main>
 
-<p>Cuando una persona entra en tu web y ve o hace clic en uno de esos anuncios, tú ganas una parte del dinero que paga el anunciante. Google se encarga de mostrar los anuncios correctos y de gestionar los pagos.</p>
-
-<h2>¿Cómo funciona Google AdSense?</h2>
-
-<p>El proceso es muy sencillo:</p>
-
-<ul>
-<li>Creas una página web o blog.</li>
-<li>Solicitas una cuenta de Google AdSense.</li>
-<li>Cuando Google aprueba tu sitio, te da un código.</li>
-<li>Pegas ese código en tu web.</li>
-<li>Empiezan a aparecer anuncios automáticamente.</li>
-</ul>
-
-<p>Los anuncios se adaptan al contenido de tu web y a los intereses de cada visitante, lo que aumenta las probabilidades de generar ingresos.</p>
-
-<h2>¿Cuánto dinero se puede ganar con AdSense?</h2>
-
-<p>No existe un límite fijo. Algunas páginas ganan unos pocos euros al mes y otras ganan miles. Todo depende de:</p>
-
-<ul>
-<li>La cantidad de visitas que recibe tu web.</li>
-<li>El país de tus visitantes.</li>
-<li>La temática de tu sitio.</li>
-<li>La calidad de tu contenido.</li>
-</ul>
-
-<p>Las páginas sobre dinero, finanzas, tecnología y negocios suelen pagar mejor que otros temas.</p>
-
-<h2>¿Es gratis usar Google AdSense?</h2>
-
-<p>Sí. Registrarse en Google AdSense es totalmente gratis. Google solo gana dinero cuando tú también lo haces, por lo que su objetivo es ayudarte a mostrar anuncios que generen ingresos.</p>
-
-</section>
-
-<footer>
-<p>
-<a href="privacidad.html">Privacidad</a> | 
-<a href="cookies.html">Cookies</a> | 
-<a href="aviso-legal.html">Aviso legal</a>
-</p>
-<p>© 2025 Libertad Financiera</p>
-</footer>
-
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
-
